[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "laswave"
version = "0.1.0" 
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "matplotlib",
    "laspy",
    "scipy",
    "lmfit",
    "structure_tensor",
    "uuid",
    "logging",
    #'importlib-metadata; python_version<"3.10"',
]

[project.optional-dependencies]
ext = [             # for (ext)ended functionality
    "LASzip",
    "lazrs",
    ] 